# maat

./: .gitignore  AGENTS.md  Makefile  README.md  go.mod  go.sum  tags.md
.github/workflows/: release.yml
agents/: README.md
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
cmd/maat/: main.go  main_test.go  tui.go
cmd/matt/: main.go  main_test.go  tui.go
decisions/: README.md
docs/: agent-protocol.md  architecture.md  cli-tui-ui.md  desktop-dashboard-views.md  desktop-error-states.md  desktop-first-release-decisions.md  desktop-signing-permissions.md  desktop-sync-controls.md  desktop-update-behavior.md  desktop-write-actions.md  development.md  implementation-plan.md  install.md  integrations.md  macos-app-architecture.md  migration-dogfood.md  schema.md  search-index.md  self-improvement.md  storage-model.md  terminal-apps-ia.md  work-plan.md  workflows.md
internal/maat/: agent_instructions.go  agent_instructions_test.go  catalog.go  catalog_test.go  catalog_validation.go  events.go  events_test.go  git_sync.go  git_sync_test.go  ids.go  index.go  migrate.go  migrate_test.go  model.go  object_store.go  object_store_test.go  project_link.go  project_link_test.go  projects.go  (+11 more)
ledger/: 2026-05.md  README.md
projects/: README.md  _template.md  aether.md  maat.md  neptune.md  orion.md
reports/: README.md
scripts/: build-release.sh  install.sh
state/: README.md
(+13 files in other folders)
