[package]
name = "maat-desktop"
version = "0.1.0"
description = "Maat desktop shell"
authors = ["Sunday Studio"]
edition = "2021"
license = "MIT"

[lib]
name = "maat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
